Fixed z-index for text

--- a/_sass/sections/_footer.scss
+++ b/_sass/sections/_footer.scss
@@ -17,6 +17,9 @@
 }
 
 .footer__content {
+  position: relative;
+  z-index: 5000;
+  
   @include breakpoint(530px) {
     @include column(8);
     @include prepend(4);
