--- a/_sass/sections/_intro.scss
+++ b/_sass/sections/_intro.scss
@@ -2,6 +2,7 @@
   padding-bottom: 5em;
   @include pie-clearfix;
   position: relative;
+  z-index: 5000;
 
   h3 {
     @include breakpoint(530px) {
